# EEsizer

./: .gitignore  AGENT.md  MANIFEST.in  README.md  agent.md  agent_test_gemini  agent_test_gpt  dev.sh  pyproject.toml  pyrefly.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
agent_test_gpt/: agent_gpt_openai.py  agent_gpt_openai_flow.md  config.py  llm_client.py  logging_utils.py  netlist_utils.py  optimization.py  prompts.py  reporting.py  simulation_utils.py  toolchain.py
benchmarks/: README.md
benchmarks/opamp3/: bench.json  bench.sp  dut.sp  spec.json
benchmarks/ota/: bench.json  bench.sp  (+2 more)
docs/: agent_interface_blueprint.md  architecture_cn.md  code_review_2025-12-31.md  code_review_agent_test_gpt.md  metrics.md  notebook_parity_baseline.md
eesizer/: README.md
eesizer_core/: README.md  __init__.py  config.py  context.py  messaging.py  netlist.py  netlist_patch.py  providers.py  simulation.py  spice.py  toolchain.py
examples/: models_dummy.lib  rc_lowpass.sp  rc_lowpass_include.sp  run_ac_once.py  run_bench_grid_opamp3.py  run_bench_grid_ota.py  run_bench_grid_then_corner_validate.py  run_bench_grid_then_corner_validate_opamp3.py  run_bench_grid_then_corner_validate_ota.py  run_benchmark_baseline.py  run_corner_search_rc.py  run_grid_search_bench.py  run_grid_search_rc.py  run_noopt_baseline.py  run_orchestrator_rc_auto.py  run_patch_loop_greedy.py  run_patch_loop_llm.py  step5_mock_loop.py
initial_circuit_netlist/: 3stage_opamp_ptm.cir
legacy_eesizer/: llm_client.py  logging_utils.py  models.py  toolchain.py
pipeline/: __init__.py  run.py
scripts/: README.md
tests/: conftest.py  test_agent_param_patch.py  test_agent_pipeline.py  test_artifact_store_roundtrip.py  test_benchmarks_baseline_integration_ngspice.py  test_benchmarks_step1_unit.py  test_cli_api_smoke.py  test_compute_metrics_missing_reasons.py  test_corner_override_relative.py  test_corner_stage_tag_safe_unit.py  test_deck_builder.py  test_grid_search_continue_after_baseline_pass.py  test_integration_ngspice.py  test_llm_client.py  test_m1_llm_call_operator_guard.py  test_m1_llm_call_operator_records_stage.py  test_m1_llm_patch_policy_parse.py  test_m1_llm_patch_policy_retry.py  test_m1_llm_policy_integration_mock.py  test_m1_manifest_includes_llm_files.py  test_m1_mock_patch_clamp.py  test_m1_patch_json_parser.py  test_m2_grid_sampler_unit.py  test_m2_grid_search_integration_ngspice.py  test_m2_grid_search_outputs_mock.py  test_m2_pareto_unit.py  test_m3_corner_aggregate_unit.py  test_m3_corner_generator_unit.py  test_m3_corner_search_outputs_mock.py  test_m4_artifact_store_unit.py  test_m4_orchestrator_mock_pipeline.py  test_m4_plan_executor_unit.py  test_messaging.py  test_metrics.py  test_metrics_algorithms.py  test_metrics_power_unit.py  test_metrics_ugbw_pm_unit.py  test_netlist_patch.py  test_ngspice_runner.py  test_ngspice_wrdata_loader.py  (+86 more)
tools/: README.md  manage_ngspice.py
(+307 files in other folders)
