[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eesizer"
version = "0.1.0"
description = "LLM-assisted analog/mixed-signal sizing with ngspice orchestration."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "scipy>=1.11",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5", "mypy>=1.7"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["eesizer_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: requires ngspice or external tools"
]
