[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eesizer"
version = "0.1.0"
description = "LLM-assisted analog/mixed-signal sizing with ngspice orchestration."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<2.1",
  "pandas>=2.1,<2.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5", "mypy>=1.7"]
llm = ["openai>=1.0.0", "python-dotenv>=1.0.0"]
viz = ["matplotlib>=3.8"]
opt = ["scipy>=1.11"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["eesizer_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: requires ngspice or external tools"
]

[tool.ruff]
target-version = "py310"
line-length = 120
per-file-ignores = {"**/__init__.py" = ["F401"]}
exclude = ["legacy", "build", "dist", "*.egg-info"]
